tests/lean/3989_2.lean.expected.out
3989_2.lean:6:0: error: expected else-alternative for `match_expr`, i.e., `| _ => ...`
Nat : Type
